# tinyrenderer

./: .gitignore  CMakeLists.txt  Makefile  README.MD  geometry.h  main  main.cpp  model.cpp  model.h
tgaimage/: CMakeLists.txt
